<resources>
    <string name="app_name">Greg</string>
    <string name="paginaafim">Função Afim</string>
    // Label - dentro da pag

    <string name="txtini">Hello Word!</string>
    <string name="txtdois">Segunda "Pagina"</string>
    <string name="txtini2">Watashi wa Gregory desu</string>

    //Definiçoes
    <string name="definiçãoaffim1"> </string>

    // Buttons
    <string name="btnone">Matematica</string>
    <string name="btndois">Fisica</string>

    // btn materias Math
    <string name="txtbtn1">Função Afim</string>
    <string name="txtbtn2">Função Quadratica</string>
    <string name="txtbtn3">função Exonencial </string>
    <string name="txtbtn4"> Conjuntos Númericos</string>
    <string name="txtbtn5">Ainda ñ sei </string>


    // btn Afim
    <string name="btnaf">Definição </string>

    <string name="andaemto">Esta tela ñ esta pronta </string>

    //Btn materias fisica

    <string name="btnfisc1">Movimento Uniforme </string>
    <string name="btnfisc2"> Movimento Uniformente Variado</string>
    <string name="btnfisc3"></string>
    <string name="btnfisc4"></string>
    <string name="btnfisc5"></string>

    // Conjuntos numericos
        <string name="conjuntonatural">Os Números Naturais são números inteiros positivos (não-negativos) que se agrupam num conjunto chamado de N, composto de um número ilimitado de elementos.</string>
        <string name="conjuntonatural_2">Exemplo    N = {0,1,2,3,4,5,6,....,n,...}</string>
        <string name="conjuntonatural_3">N* = {1,2,3,4,5,6,....,n,...} - Conjunto dos numeros naturais não nulos</string>

        <string name="conjuntointerio">Os números inteiros são os números positivos e negativos. Estes números formam o conjunto dos números inteiros, indicado por ℤ. </string>
        <string name="conjuntointerio_2">ℤ = {..., - 3, - 2, - 1, 0, 1, 2, 3,...}</string>
        <string name="conjuntointerio_3">Subconjuntos: </string>
        <string name="conjuntointerio_4">ℤ* : é o subconjunto dos números inteiros, com exceção do zero. ℤ* = {..., -3,-2,-1, 1, 2, 3, 4, ...} </string>
        <string name="conjuntointerio_5">ℤ+ : são os números inteiros não-negativos, ou seja ℤ+ = {0, 1, 2, 3, 4, ...}</string>
        <string name="conjuntointerio_6">ℤ _ : é o subconjunto dos números inteiros não-positivos, ou seja ℤ_= {..., -4,-3,-2,-1, 0}</string>
        <string name="conjuntointerio_7">ℤ*+ : é o subconjunto dos números inteiros, com exceção dos negativos e do zero. ℤ*+ = {1,2,3,4, 5...}</string>
        <string name="conjuntointerio_8">ℤ*_ : são os números inteiros, com exceção dos positivos e do zero, ou seja ℤ*_= {..., -4,-3,-2,-1}</string>

        <string name="conjuntoracional">""</string>

        <string name="conjuntoirracional">""</string>

        <string name="conjuntoreal">""</string>
</resources>
