<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn1"
            android:layout_width="329dp"
            android:layout_height="42dp"
            android:baselineAligned="false"
            android:text="@string/txtbtn1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.195"
            tools:layout_editor_absoluteX="34dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="327dp"
            android:layout_height="39dp"
            android:baselineAligned="false"
            android:text="@string/txtbtn2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.293"
            tools:layout_editor_absoluteX="34dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="329dp"
            android:layout_height="43dp"
            android:text="@string/txtbtn3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.432"
            tools:layout_editor_absoluteX="34dp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="324dp"
            android:layout_height="37dp"
            android:text="@string/txtbtn4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581"
            tools:layout_editor_absoluteX="36dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="329dp"
            android:layout_height="45dp"
            android:text="@string/txtbtn5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.699"
            tools:layout_editor_absoluteX="34dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="34dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="363dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>